@@ -1,1 +1,1 @@
-d /var/cache/man 0755 @man_owner@ @man_owner@ 1w
+d /var/cache/man 0755 @cache_top_owner@ @cache_top_owner@ 1w
