@@ -11,6 +11,9 @@ Major changes since man-db 2.8.3:
 	  line.  This works better with downstream AppArmor confinement of
 	  decompressors.
 
+	* Fix invalid syntax in tmpfiles.d/man-db.conf when configured with
+	  --disable-cache-owner.
+
 man-db 2.8.3 (5 April 2018)
 ===========================
 
